--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
     border: solid black 1px;
     width: 98vw;
-    height: 98vw;
+    height: 25vw;
     display: grid; 
     grid-template-rows: 1fr 6fr 1fr;
 
@@ -33,10 +33,42 @@ column 3: width 1/4
 
 .children{
     background-color: orange;
+ 
     
 }
 
 #footer{
 
     background-color: green;
+}
+
+p{
+    font-size: 5rem;
+    color:magenta;
+}
+
+#insp{
+
+    border:solid royalblue 5px;
+    display: grid;
+    height: 25vw;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-gap: 6px;
+    
+}
+
+.sidebar{
+    background-color: orange;
+    height: 200%;
+
+    
+}
+
+.sidebarplus{
+    background-color: orange;
+    width: 15%;
+    height: 140%;
+   
+    
 }
