--- a/css/style2.css
+++ b/css/style2.css
@@ -8,4 +8,47 @@ font-size: 3rem;
 #container{
 
     background-color: rgb(223, 203, 126);
+    width: 98vw;
+    height: 50vw;
+    display: grid;
+    border: solid blue 6px;
+    gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    flex-wrap: nowrap;
+
+}
+
+
+
+
+
+.a{
+grid-column: 1/3;
+background-color: crimson;
+}
+
+.b{
+    grid-column: 3/5;
+    background-color: aqua;
+}
+
+.c{
+
+    grid-row: 2;
+    grid-column: 1/2;
+    background-color: orange;
+}
+
+.d{
+    grid-row: 2;
+    grid-column: 2/5;
+    background-color: rebeccapurple;
+    flex-wrap: nowrap;
+}
+
+.e{
+    grid-row: 3;
+    grid-column:1/5;
+    background-color: rgb(79, 206, 134);
 }
